# ED64

./: .gitignore  CMakeLists.txt  README.md  azure-pipelines.yml
.github/workflow/: build-usb64.yml
.github/workflows/: build-ED64CommsUtility-all_arch.yml  build-ed64-example-rom.yml  build-ed64xio-rom-linux.yml  build-usb64-linux.yml  build-usb64-windows.yml  build-usb64.yml
ED64-XIO/: CMakeLists.txt  Makefile  README.md
ED64-XIO/CMake/: toolchain.libdragon.cmake
ED64-XIO/ff/: README.md  diskio.c  diskio.h  fileio.c
ED64-XIO/inc/: bios.h  disk.h  ed64.h  everdrive.h  graphics.h  main.h  screen.h  sddisk.h  sys.h  sysregion.h  types.h
ED64-XIO/inc/edlib/: ed64.h  sddisk.h
ED64-XIO/inc/libed64/: edbios.h  edsdio.h  everdrive.h  sys.h
ED64-XIO/src/: bios.c  disk.c  ed64.c  filedisplay.c  fileio.c  filemanagersample.c  filemenu.c  filesample.c  fmanager.c  graphics.c  incs.s  main.c  rtc.c  screen.c  sddisk.c  sys.c  sysregion.c  usb.c  usbsample.c  usbterminal.c
ED64-XIO/src/edlib/ff/: README.md  diskio.c  ff.c  ffconf.h
ED64-XIO/src/libed64/: edbios.c  edrtc.c  edsdio.c  sys.c
ED64-XIO/src/libed64/ff/: diskio.c  ff.h
ED64-XIO/tools/: usb.bat
ED64CommsUtility/: ED64CommsUtility.sln
ED64CommsUtility/ED64CommsUtility/: CmdLineOptions.cs  CommandProcessor.cs  DeveloperRom.cs  ED64CommsUtility.csproj  IUsbInterface.cs  ImageUtilities.cs  Program.cs  README.md  StorageOperations.cs  TcpProxy.cs  UsbInterface.cs  usb64.csproj
ED64CommsUtility/UnitTests/: Tests.csproj
docs/: real_time_clock.md  rom_config_database.md
tools/example-upload-scripts/: upload-dev-rom-eep4k-rtc.bat  upload-dev-rom-flashram-rtc.bat  upload-dev-rom-nosave-rtc.bat  upload-dev-rom-rtc.bat
usb64/: README.MD  usb64.sln
usb64/UnfDebug/: Cartridge.cs  Debugger.cs  FramebufferInfoPacket.cs  ImageUtilities.cs  ReceiveCommandPacket.cs  ScreenshotInfoPacket.cs  TargetDevice.cs  UnfDebug.csproj  UnfDebugOld.cs
usb64/UnitTests/: ImageUtilityTests.cs  MockCommandLineArguments.cs  RomOperationTests.cs  StorageOperationTests.cs  Tests.csproj  UsbInterfaceTests.cs
usb64/usb64/: CmdLineOptions.cs  CommandProcessor.cs  DeveloperRom.cs  IUsbInterface.cs  Program.cs  README.md  TcpProxy.cs  UsbInterface.cs  usb64.csproj
usb64/usb64UnitTests/: UnfDebugger.cs  usb64UnitTests.csproj
